add first launch view and launchscreen

--- a/DimeDasher/Info.plist
+++ b/DimeDasher/Info.plist
@@ -7,5 +7,14 @@
 		<string>Raleway-Bold.ttf</string>
 		<string>Raleway-Regular.ttf</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>CustomLightPink</string>
+		<key>UIImageName</key>
+		<string>launchImage</string>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
